[gd_scene load_steps=3 format=3 uid="uid://clot70wlwhdtv"]

[ext_resource type="Script" path="res://prog_115a.gd" id="1_novl4"]
[ext_resource type="Theme" uid="uid://duan326d8yya2" path="res://big_font.tres" id="2_bac50"]

[node name="Prog115a" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_novl4")

[node name="ItemList" type="ItemList" parent="."]
layout_mode = 0
offset_right = 1155.0
offset_bottom = 424.0
theme = ExtResource("2_bac50")

[node name="btncalc" type="Button" parent="."]
layout_mode = 0
offset_left = -7.0
offset_top = 515.0
offset_right = 156.0
offset_bottom = 641.0
theme = ExtResource("2_bac50")
text = "calculate"

[node name="btnclear" type="Button" parent="."]
layout_mode = 0
offset_left = 444.0
offset_top = 522.0
offset_right = 625.0
offset_bottom = 648.0
theme = ExtResource("2_bac50")
text = "clear"

[node name="btnexit" type="Button" parent="."]
layout_mode = 0
offset_left = 975.0
offset_top = 525.0
offset_right = 1156.0
offset_bottom = 651.0
theme = ExtResource("2_bac50")
text = "exit"

[connection signal="pressed" from="btncalc" to="." method="_on_btncalc_pressed"]
[connection signal="pressed" from="btnclear" to="." method="_on_btnclear_pressed"]
[connection signal="pressed" from="btnexit" to="." method="_on_btnexit_pressed"]
